# tro-report

./: LICENSE  README.md  pyproject.toml
example/: Certificate-SIVACOR.md  tro-6a316ed464efec49e59c464b.jsonld
example/output/: partb-SIVACOR-appendix.md  partb-SIVACOR-computing-environment.md  partb-SIVACOR-findings.md  partb-SIVACOR-replication-steps.md
src/tro_report/: __init__.py  main.py
