[project]
name = "tro-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kacper Kowalik (Xarthisius)", email = "xarthisius.kk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.8",
]
license = "MIT"

[project.scripts]
tro-report = "tro_report.main:app"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
